fix header map link/search form z-index

--- a/frontend/css/_30em.scss
+++ b/frontend/css/_30em.scss
@@ -50,6 +50,10 @@
     }
 }
 
+#hugemap .map-link {
+    padding-left: 1em;
+}
+
 .long {
     column-count: 2;
 }
