--- a/frontend/css/_base.scss
+++ b/frontend/css/_base.scss
@@ -207,6 +207,7 @@ summary::marker {
                 margin: 0;
                 position: absolute;
                 top: -3em;
+                z-index: 1;
 
                 &:focus {
                     border-width: .75em 1em;
@@ -697,7 +698,8 @@ table {
     position: absolute;
     top: -3.5em;
     right: 0;
-    padding:  1em;
+    padding: 1em;
+    padding-left: .5em;
     text-decoration: none;
     color: var(--header-text-color);
 
